active-cluster-service/deploy/openshift/acs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: active-cluster-service
  labels:
    app: active-cluster-service
spec:
  type: ClusterIP
  selector:
    app: active-cluster-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
