active-cluster-service/deploy/openshift/acs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: active-cluster-service
  labels:
    app: active-cluster-service
spec:
  to:
    kind: Service
    name: active-cluster-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
